solved overflowing list probllem

--- a/src/input.css
+++ b/src/input.css
@@ -2,5 +2,6 @@
 
 body {
   background-color : burlywood;
+  padding-bottom: 20%;
 }
   
